--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "graphql",
-  "version": "0.1.0",
+  "name": "GraphQL",
+  "version": "1.0",
   "private": true,
   "dependencies": {
     "@apollo/react-hooks": "^3.1.4",
@@ -35,5 +35,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "main": "index.js",
+  "repository": "git@github.com:TomaszLaski/GraphQl.git",
+  "author": "Tomasz Łaski <tomasz.laski0001@gmail.com>",
+  "license": "MIT"
 }
